--- a/src/app/@ansyn/map-facade/less/map-facade.less
+++ b/src/app/@ansyn/map-facade/less/map-facade.less
@@ -30,3 +30,7 @@
 @scale-line-height: 32px;
 @z-index-toast: 5000;
 @menu-width: 90px;
+
+@mouse-coordinate-bottom: calc(@status-bar-height + 5px);
+@mouse-coordinate-bottom-minimize: 5px;
+@mouse-coordinate-height: @scale-line-height + 6px;
