update imageries-manager less

--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -315,14 +315,18 @@
 	}
 
 	div.footer-collapsed {
+		/deep/ .ol-scale-line {
+			bottom: 5px !important;
+		}
+
 		&.layout1 {
-			/deep/ .ol-scale-line, /deep/ .ol-attribution {
+			/deep/ .ol-attribution {
 				bottom: 5px;
 			}
 		}
 
 		&.layout2 {
-			/deep/ .ol-scale-line, /deep/ .ol-attribution {
+			/deep/ .ol-attribution {
 				bottom: 5px;
 			}
 
@@ -358,7 +362,7 @@
 				width: 100%;
 				height: 50%;
 
-				/deep/ .ol-scale-line, /deep/ .ol-attribution {
+				/deep/ .ol-attribution {
 					bottom: 5px;
 				}
 
@@ -378,7 +382,7 @@
 						height: 100%;
 					}
 
-					/deep/ .ol-scale-line, /deep/ .ol-attribution {
+					/deep/ .ol-attribution {
 						bottom: 5px;
 					}
 				}
@@ -400,7 +404,7 @@
 						height: 100%;
 					}
 
-					/deep/ .ol-scale-line, /deep/ .ol-attribution {
+					/deep/ .ol-attribution {
 						bottom: 5px;
 					}
 				}
@@ -443,7 +447,7 @@
 						height: 100%;
 					}
 
-					/deep/ .ol-scale-line, /deep/ .ol-attribution {
+					/deep/ .ol-attribution {
 						bottom: 5px;
 					}
 				}
@@ -475,7 +479,7 @@
 				height: 50%;
 
 
-				/deep/ .ol-scale-line, /deep/ .ol-attribution {
+				/deep/ .ol-attribution {
 					bottom: 5px;
 				}
 
