share link z-index

--- a/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.less
+++ b/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.less
@@ -32,7 +32,7 @@ div.status-timeline-container {
 		outline: none;
 		visibility: visible;
 		transition: .5s;
-		z-index: 5;
+		z-index: @z-index-hide-menu-button;
 
 		&:hover {
 			background-color: #27B2CF;
