translate Min-Max

--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/slider-filter-container/slider-filter-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/slider-filter-container/slider-filter-container.component.html
@@ -6,7 +6,7 @@
 				{{metadata.min}}
 			</div>
 			<div class="range">
-				{{getMinRangeValue(realRange[0])}} - {{getMaxRangeValue(realRange[1])}}
+				{{getMinRangeValue(realRange[0]) | translate}} - {{getMaxRangeValue(realRange[1]) | translate}}
 			</div>
 			<div class="max">
 				{{metadata.max}}
