--- a/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.less
@@ -1,108 +1,105 @@
 @import 'ansyn/less/z-index-globals';
 
+@circle-diameter: 150px;
+@point-size: 20px;
+@arrow-height: 50px;
+@arrow-width: 30px;
 :host {
-
 	outline: none;
 	position: fixed;
 	z-index: @z-index-context-menu;
-
 	&:focus {
-		div.angle-filter {
-			width: 200px;
-			height: 200px;
-			-webkit-border-radius: 100%;
-			-moz-border-radius: 100%;
-			border-radius: 100%;
+		div.angle-filter{
 			visibility: visible;
+		}
+	}
+
+	div.angle-filter{
+		visibility: hidden;
+		transition: visibility 200ms;
+		display: flex;
+		flex-direction: column;
+		i.point {
+			position: relative;
+			top: calc((@circle-diameter / 2) - (@point-size / 2));
+			left: calc((@circle-diameter / 2) - (@point-size / 2));
+			font-size: 20px;
+			background: white;
+			color: black;
+			z-index: 5;
+		}
+		div.circle {
+			display: flex;
+			width: @circle-diameter;
+			height: @circle-diameter;
 			-webkit-border-radius: 100%;
 			-moz-border-radius: 100%;
 			border-radius: 100%;
 			background-color: rgba(205, 205, 205, 0.7);
 
-			i.point {
-				visibility: visible;
-				transition: visibility 100ms;
-			}
-
-
 			div.arrows {
-				button {
-					visibility: visible;
+				position: absolute;
+				top: 0;
+				width: @circle-diameter;
+				height: @circle-diameter;
+
+				span.arrow {
+					position: relative;
+					top: calc( (@circle-diameter /2 ) - (@arrow-height / 2));
+					left: calc( (@circle-diameter /2 ) + (@arrow-width / 3));
 					transition: visibility 100ms;
-					padding: 10px;
-					border: none;
-					background-color: transparent;
+					transform-origin: bottom;
+					display: inline-block;
+					width: @arrow-width;
+					height: @arrow-height;
+					zoom: .75;
 
-					span.arrow {
-						display: inline-block;
-						position: relative;
-						width: 30px;
-						height: 50px;
-						zoom: .75;
+					&:before {
+						box-sizing: border-box;
+						content: "";
+						display: block;
+						position: absolute;
+						left: 50%;
+						transform: translate(-50%, 0);
+						top: 1px;
+						bottom: 0;
+						width: 1px;
+						background: deeppink;
+						zoom: 2;
 
-						&:before {
-							box-sizing: border-box;
-							content: "";
-							display: block;
-							position: absolute;
-							left: 50%;
-							transform: translate(-50%, 0);
-							top: 1px;
-							bottom: 0;
-							width: 1px;
-							background: deeppink;
-							zoom: 2;
-
-							&.active {
-								background: purple;
-							}
+						&.active {
+							background: purple;
 						}
+					}
 
-						&:after {
-							box-sizing: content-box;
-							content: "";
-							display: block;
-							position: absolute;
-							top: 0;
-							left: 50%;
-							width: 57%;
-							height: 0;
-							padding-bottom: 57%;
-							border: 1px solid deeppink;
-							border-width: 1px 0 0 1px;
-							transform: translate(0, 0) rotate(45deg);
-							transform-origin: 0% 0%;
-							border-radius: 0;
-							zoom: 2;
-							//background: rgba(0,255,0,.5);
-							&.active {
-								border: 1px solid purple;
-							}
+					&:after {
+						box-sizing: content-box;
+						content: "";
+						display: block;
+						position: absolute;
+						top: 0;
+						left: 50%;
+						width: 57%;
+						height: 0;
+						padding-bottom: 57%;
+						border: 1px solid deeppink;
+						border-width: 1px 0 0 1px;
+						transform: translate(0, 0) rotate(45deg);
+						transform-origin: 0% 0%;
+						border-radius: 0;
+						zoom: 2;
+						//background: rgba(0,255,0,.5);
+						&.active {
+							border: 1px solid purple;
 						}
 					}
 				}
 			}
 		}
-	}
-
-	div.angle-filter {
-		visibility: hidden;
-		position: fixed;
-		transition: visibility 200ms;
-
-		button{
-			visibility: hidden;
-			transition: visibility 100ms;
+		div.rectangles {
+			display: flex;
+			justify-content: center;
 		}
 
-		i.point{
-			position: relative;
-			top: 100px;
-			left: 100px;
-			visibility: hidden;
-			transition: visibility 100ms;
-		}
 	}
-
-
 }
