--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -168,7 +168,13 @@
 		"url": "http://dev.virtualearth.net/REST/v1/Locations?locality=$searchString&maxResults=1&key=$apiKey",
 		"apiKey": "AofqJGk-uEej_Pv7hkbpXh6H3pb54luGZj6lfe90ksZEoBY-JmgTwGE2s9TF6peC"
 	},
-	"floatingPositionSuffix": "{{ getv "/ansyn/floation/position/suffix" "" }}"
+	"floatingPositionSuffix": "{{ getv "/ansyn/floation/position/suffix" "" }}",
+	"floatingPositionSystem" : "WGS84",
+	"Proj4": {
+	  "ed50": "+proj=utm +datum=ed50 +zone=${zone} +ellps=intl +units=m + no_defs",
+	  "ed50Customized": "",
+	  "ed50Notification": ""
+	}
   },
   "mapProvidersConfig": {
   	"openLayersMap": {
@@ -255,11 +261,6 @@
         "datum": "ed50",
         "projection": "utm"
       }
-    },
-    "Proj4": {
-      "ed50": "+proj=utm +datum=ed50 +zone=${zone} +ellps=intl +units=m + no_defs",
-      "ed50Customized": "",
-      "ed50Notification": ""
     },
     "ImageProcParams": [
       {
