hide mouse coordinate on not geo-registrated image

--- a/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.html
@@ -1,4 +1,5 @@
-<div *ngIf='long && isVisible'>
+<div *ngIf='long && isVisible'
+[class.mouse-coordinate]="long && isVisible">
 	{{ long }}&deg; {{lat}}&deg; <span *ngIf=height>{{height}}m</span> {{floatingPositionSuffix}}
 </div>
 
