fix: color select is too high

--- a/src/app/@ansyn/map-facade/less/map-facade.less
+++ b/src/app/@ansyn/map-facade/less/map-facade.less
@@ -25,6 +25,7 @@
 @status-bar-height: 35px;
 @z-index-map-search-box: 1;
 @z-index-map-rotation: 2;
+@z-index-mouse-coordinate: 3;
 @z-index-imagery-status: 3;
 @map-search-box-width: 100px;
 @scale-line-height: 32px;
