enh: add supporot to another coordinate system for floating postion (#2423)
* enh: add supporot to another coordinate system for floating postion

* fix build and test

* components for coordinates holders

* lint & import fix

--- a/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.html
@@ -1,5 +1,16 @@
 <div *ngIf='long && isVisible'
-[class.mouse-coordinate]="long && isVisible">
-	{{ long }}&deg; {{lat}}&deg; <span *ngIf=height>{{height}}m</span> {{floatingPositionSuffix}}
+	 [class.mouse-coordinate]="long && isVisible"
+	 [ngSwitch]="floationgSystem" >
+
+	<ansyn-geo-holder *ngSwitchCase="'WGS84'"
+	[lat]="lat"
+	[long]="long"
+	[height]="height"></ansyn-geo-holder>
+	<ansyn-utm-holder *ngSwitchCase="'UTM'"
+	[x]="long"
+	[y]="lat"
+	[zone]="zone"
+	[height]="height"></ansyn-utm-holder>
+	 &nbsp;{{floatingPositionSuffix}}
 </div>
 
