--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.less
@@ -4,6 +4,7 @@
 	top: 10px;
 	right: 120px;
 	z-index: 3;
+	direction: rtl;
 	background-color: white;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
