add direction flag

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.html
@@ -1,7 +1,8 @@
 
 	<div
 		*ngIf="show"
-		[class.measure]="show">
+		[class.measure]="show"
+	[style.direction]="'ltr' | translate">
 		<p>{{'Measure Distance' | translate}}</p>
 
 		<button
