--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.less
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.less
@@ -4,19 +4,19 @@
 :host  {
 	position: absolute;
 	right: 40px;
-	top: 120px;
+	top: 160px;
 	z-index: 1;
-	background-color: rgba(0, 0, 0, 0.3);
-	color: white;
 
-	.show {
-		padding: 4px;
-	}
 
 	.buttons {
 		line-height: 0;
 		left: 5px;
 		top: 6px;
+		text-align: center;
+		margin-bottom: 5px;
+		background-color: rgba(0, 0, 0, 0.3);
+		color: white;
+		padding: 4px;
 
 		button {
 			position: relative;
@@ -32,6 +32,7 @@
 				outline: none;
 				padding: 4px 7px;
 				align-items: center;
+
 				z-index: 1;
 				height: 25px;
 				&:hover:not(:disabled) {
