--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -33,7 +33,7 @@
 			overflow: hidden;
 
 			select.active-annotation-layer {
-				background: @application-main-color;
+				background: @application-primary-color;
 				border: none;
 				color: white;
 				outline: none;
