--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -1,6 +1,7 @@
 @import "ansyn/less/common";
 @import "ansyn/less/colors";
 @import "ansyn/less/z-index-globals";
+@import "map-facade/less/map-facade";
 
 @height-minus-status: calc(~"100% - @{status-bar-height}");
 
