--- a/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-mouse-coordinates/imagery-mouse-coordinates.component.less
@@ -1,5 +1,6 @@
 @import "ansyn/less/z-index-globals";
-
+@import 'map-facade/less/map-facade';
+@z-index-mouse-coordinate: 3;
 
 :host {
 	position: absolute;
