update preset icons

--- a/src/app/@ansyn/ansyn/modules/core/forms/slider-checkbox/slider-checkbox.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/forms/slider-checkbox/slider-checkbox.component.less
@@ -56,7 +56,7 @@ input:disabled ~ .switch {
 }
 
 input:checked + .slider {
-	background-color: lighten(@background-color-3, 20%);
+	background-color: @application-primary-color;
 }
 
 input:focus + .slider {
