--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/enum-filter-container/enum-filter-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/enum-filter-container/enum-filter-container.component.less
@@ -1,5 +1,5 @@
-@import "ansyn/less/common";
-
+@import 'ansyn/less/common';
+@import 'ansyn/less/colors';
 div.enum-fields-enumerator {
 
 	display: flex;
