--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
@@ -12,7 +12,7 @@
 			[disabled]="noGeoRegistration"
 			[attr.tooltip-value]="presetsButtonText | translate"
 			[attr.tooltip-class]="mapsAmount > 1 ? 'bottom right' : 'top right'">
-		<i class="icon icon-presets"></i>
+		<i class="icon icon-quick-loop-add"></i>
 	</button>
 
 	<button class="small-icon-button remove-overlay" *ngIf="overlay "
