--- a/src/app/@ansyn/ansyn/modules/status-bar/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/navigation-bar/navigation-bar.component.html
@@ -12,7 +12,7 @@
 			[attr.tooltip-value]="toolTips.quickloop | translate"
 			tooltip-class="top left"
 	>
-		<i class="icon-presets"></i>
+		<i class="icon-quick-loop"></i>
 	</button>
 
 	<button (click)="clickGoAdjacent(true)"
