--- a/src/app/@ansyn/ansyn/less/colors.less
+++ b/src/app/@ansyn/ansyn/less/colors.less
@@ -9,4 +9,6 @@
 @background-color-4: #373738;
 @background-color-5: #4c4c4c;
 @background-color-6: #5c5c5c;
-@background-color-7: #d8d8d8;
+@background-color-7: #7a7a7a;
+@background-color-8: #8c8c8c;
+@background-color-9: #d8d8d8;
