--- a/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.html
@@ -1,5 +1,7 @@
 <div class="angle-filter">
-	<i class="icon-map-Point point"></i>
+	<p class="point">
+	<i class="icon-map-Point"></i>
+	</p>
 	<div class="circle">
 		<div class="arrows">
 		<span class="arrow" *ngFor="let angle of angles"
