--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.html
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.html
@@ -1,14 +1,16 @@
 <div class="buttons">
 		<button class="small-icon-button"
 				[attr.tooltip-value]="'Reset zoom' | translate"
-				tooltip-class="'bottom left'">
+				tooltip-class="'bottom left'"
+		(click)="resetZoom()">
 			1:1
 		</button>
 </div>
 <div class="buttons">
 	<button class="small-icon-button"
 			[attr.tooltip-value]="'Zoom in' | translate"
-			tooltip-class="'bottom left'">
+			tooltip-class="'bottom left'"
+	(click)="zoomIn()">
 		+
 	</button>
 </div>
@@ -16,7 +18,8 @@
 <div class="buttons">
 	<button class="small-icon-button"
 			[attr.tooltip-value]="'Zoom out' | translate"
-			tooltip-class="'bottom left'">
+			tooltip-class="'bottom left'"
+	(click)="zoomOut()">
 		-
 	</button>
 </div>
