update layout style

--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.less
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.less
@@ -52,4 +52,12 @@
 	}
 }
 
+div.imageries-container {
+	&.layout2, &.layout3, &.layout4, &.layout5, &.layout6 {
+		:host {
+			top: 190px;
+		}
+	}
+}
+
 
