update color var

--- a/src/app/@ansyn/ansyn/less/colors.less
+++ b/src/app/@ansyn/ansyn/less/colors.less
@@ -7,8 +7,12 @@
 @background-color-2: #1a1a1a;
 @background-color-3: #2c2c2c;
 @background-color-4: #373738;
-@background-color-5: #4c4c4c;
-@background-color-6: #5c5c5c;
-@background-color-7: #7a7a7a;
-@background-color-8: #8c8c8c;
-@background-color-9: #d8d8d8;
+@background-color-5: #3c3c3c;
+@background-color-6: #4c4c4c;
+@background-color-7: #5c5c5c;
+@background-color-8: #676767;
+@background-color-9: #7a7a7a;
+@background-color-10: #8c8c8c;
+@background-color-11: #d8d8d8;
+@background-color-12: white;
+
