--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -1,11 +1,11 @@
-
-.icon-add:before { content: '\e800'; } /* '' */
+.icon-layer-add:before { content: '\e800'; } /* '' */
 .icon-annotation-arrow:before { content: '\e801'; } /* '' */
 .icon-annotation-circle:before { content: '\e802'; } /* '' */
 .icon-annotation-color:before { content: '\e803'; } /* '' */
-.icon-annotation-linestring:before { content: '\e804'; } /* '' */
+.icon-annotation-line:before { content: '\e804'; } /* '' */
 .icon-annotation-point:before { content: '\e805'; } /* '' */
 .icon-annotation-polygon:before { content: '\e806'; } /* '' */
+.icon-annotation-square:before { content: '\e807'; } /* '' */
 .icon-annotation-weight:before { content: '\e808'; } /* '' */
 .icon-annotations:before { content: '\e809'; } /* '' */
 .icon-automatic-image-processing:before { content: '\e80a'; } /* '' */
@@ -13,15 +13,14 @@
 .icon-close:before { content: '\e80c'; } /* '' */
 .icon-delete:before { content: '\e80d'; } /* '' */
 .icon-edit:before { content: '\e80e'; } /* '' */
-.icon-export:before { content: '\e80f'; } /* '' */
-.icon-favorites_2:before { content: '\e810'; } /* '' */
+.icon-layer-export:before { content: '\e80f'; } /* '' */
+.icon-favorites-active:before { content: '\e810'; } /* '' */
 .icon-favorites:before { content: '\e811'; } /* '' */
 .icon-frame-mode:before { content: '\e812'; } /* '' */
-.icon-import:before { content: '\e813'; } /* '' */
+.icon-layer-import:before { content: '\e813'; } /* '' */
 .icon-input_filter:before { content: '\e814'; } /* '' */
 .icon-layers-hide:before { content: '\e815'; } /* '' */
 .icon-layers-show:before { content: '\e816'; } /* '' */
-.icon-link-copy:before { content: '\e817'; } /* '' */
 .icon-link:before { content: '\e818'; } /* '' */
 .icon-main-cases:before { content: '\e819'; } /* '' */
 .icon-main-data-layers:before { content: '\e81a'; } /* '' */
@@ -40,6 +39,9 @@
 .icon-screen-5:before { content: '\e827'; } /* '' */
 .icon-screen-6:before { content: '\e828'; } /* '' */
 .icon-shadow-mouse:before { content: '\e829'; } /* '' */
+.icon-share:before { content: '\e82a'; } /* '' */
+.icon-status-bar-case:before { content: '\e82b'; } /* '' */
+.icon-status-bar-geo:before { content: '\e82c'; } /* '' */
 .icon-status-bar-imagery-count:before { content: '\e82d'; } /* '' */
 .icon-status-bar-next:before { content: '\e82e'; } /* '' */
 .icon-status-bar-prev:before { content: '\e82f'; } /* '' */
@@ -51,55 +53,20 @@
 .icon-tools-ruler:before { content: '\e835'; } /* '' */
 .icon-unpin:before { content: '\e836'; } /* '' */
 .icon-upload-button:before { content: '\e837'; } /* '' */
-.icon-status-bar-geo:before { content: '\e838'; } /* '' */
-.icon-status-bar-case:before { content: '\e839'; } /* '' */
-.icon-share:before { content: '\e83a'; } /* '' */
-.icon-annotation-rectangle:before { content: '\e842'; } /* '' */
-.icon-screen-7:before { content: '\e85e'; } /* '' */
-.icon-screen-8:before { content: '\e85f'; } /* '' */
-.icon-screen-9:before { content: '\e860'; } /* '' */
-.icon-screen-10:before { content: '\e861'; } /* '' */
-.icon-screen-11:before { content: '\e862'; } /* '' */
-.icon-screen-12:before { content: '\e863'; } /* '' */
-.icon-context-menu-next:before { content: '\e906'; } /* '' */
-.icon-context-menu-prev:before { content: '\e907'; } /* '' */
-.icon-context-menu-angle:before { content: '\e908'; } /* '' */
-.icon-map-pin-point:before { content: '\e909'; } /* '' */
-.icon-context-menu-first:before { content: '\e90a'; } /* '' */
-.icon-context-menu-last:before { content: '\e90b'; } /* '' */
+.icon-remove-overlay-copy:before { content: '\e838'; } /* '' */
+.icon-export-maps:before { content: '\e839'; } /* '' */
+.icon-map-point:before { content: '\e83a'; } /* '' */
+.icon-context-menu-first:before { content: '\e83b'; } /* '' */
+.icon-context-menu-angle:before { content: '\e83c'; } /* '' */
+.icon-context-menu-prev:before { content: '\e83d'; } /* '' */
+.icon-context-menu-best:before { content: '\e83e'; } /* '' */
+.icon-context-menu-next:before { content: '\e83f'; } /* '' */
+.icon-context-menu-last:before { content: '\e840'; } /* '' */
 .icon-status-bar-orientation:before { content: '\e90d'; } /* '' */
-.icon-polygon:before { content: '\e90f'; } /* '' */
-.icon-tools-polygons:before { content: '\e912'; } /* '' */
-.icon-save:before { content: '\e914'; } /* '' */
-.icon-status-bar-share-link:before { content: '\e915'; } /* '' */
-.icon-help:before { content: '\e917'; } /* '' */
-.icon-loop:before { content: '\e91b'; } /* '' */
-.icon-Frame-84-1:before { content: '\e91c'; } /* '' */
+.icon-map-polygon:before { content: '\e90f'; } /* '' */
+.icon-drop-off:before { content: '\e91c'; } /* '' */
 .icon-status-bar-expand:before { content: '\e91d'; } /* '' */
-.icon-drop:before { content: '\e91e'; } /* '' */
-.icon-tools-height:before { content: '\e920'; } /* '' */
+.icon-drop-on:before { content: '\e91e'; } /* '' */
 .icon-main-algorithms:before { content: '\e921'; } /* '' */
 .icon-main-settings:before { content: '\e923'; } /* '' */
 .icon-status-bar-alert:before { content: '\e927'; } /* '' */
-.icon-sync:before { content: '\e928'; } /* '' */
-.icon-no-of-screens:before { content: '\e929'; } /* '' */
-.icon-measure-:before { content: '\e92a'; } /* '' */
-.icon-Frame-461-3:before { content: '\e92b'; } /* '' */
-.icon-tools-pin:before { content: '\e92d'; } /* '' */
-.icon-label:before { content: '\e930'; } /* '' */
-.icon-color:before { content: '\e932'; } /* '' */
-.icon-weight:before { content: '\e933'; } /* '' */
-.icon-restore:before { content: '\e934'; } /* '' */
-.icon-tools-toggle:before { content: '\e939'; } /* '' */
-.icon-entity-time-line:before { content: '\e940'; } /* '' */
-.icon-tools-export:before { content: '\e942'; } /* '' */
-.icon-annotation-duplicate:before { content: '\e951'; } /* '' */
-.icon-status-bar-show-pin-point:before { content: '\e956'; } /* '' */
-.icon-permanent-link:before { content: '\e958'; } /* '' */
-.icon-context-menu-best:before { content: '\e95b'; } /* '' */
-.icon-remove-from-case:before { content: '\e978'; } /* '' */
-.icon-reset-timeline:before { content: '\e97a'; } /* '' */
-
-.icon-export-maps:before {
-	content: '\e92b'
-}
