--- a/src/app/@ansyn/ansyn/assets/styles/styles.css
+++ b/src/app/@ansyn/ansyn/assets/styles/styles.css
@@ -254,6 +254,7 @@ input[type=number]::-webkit-outer-spin-button {
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
+	font-size: 24px;
 
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
