--- a/src/app/@ansyn/ansyn/modules/core/components/context-menu/context-menu.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/context-menu/context-menu.component.html
@@ -1,7 +1,7 @@
 <nav class="menu">
 
 	<button class="menu-open-button" (mousedown)="isClick($event) && setPinPoint()" id="contextGeoFilter">
-		<span class="pointer icon-map-pin-point" [ngClass]="'icon-map-' + geoFilter">
+		<span class="pointer" [ngClass]="'icon-map-' + geoFilter">
 
 		</span>
 	</button>
