--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
@@ -1,3 +1,6 @@
+@import 'ansyn/less/colors';
+@import 'ansyn/less/globals';
+
 :host {
 	line-height: 0;
 	left: 5px;
@@ -12,7 +15,7 @@
 
 		&.small-icon-button {
 			margin-left: 3px;
-			font-size: 17px;
+			font-size: @icon-size;
 			background: transparent;
 			border: none;
 			outline: none;
@@ -32,6 +35,12 @@
 		&.set-favorite.active2 i, &.set-preset.active2 i, &.remove-overlay.active2 i {
 			text-shadow: 0 0 9px yellow;
 			-webkit-text-stroke: 0.2px yellow;
+		}
+
+		i{
+			&.icon-favorites-active{
+				color: @application-primary-color;
+			}
 		}
 
 		.icon::before {
