--- a/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/combo-boxes/combo-boxes.component.less
@@ -1,4 +1,5 @@
 @import "ansyn/less/colors";
+@import "ansyn/less/globals";
 
 :host {
 	display: block;
@@ -49,25 +50,13 @@
 				border-left: none;
 				box-sizing: border-box;
 				.icon-edit {
-					font-size: 17px;
+					font-size: @icon-size;
 				}
-				border: 1px solid white;
-				&::before {
-					content: "";
-					display: block;
-					width: 10px;
-					height: 10px;
-					top: 12px;
-					background: inherit;
-					transform: translateX(-6px) rotate(45deg);
-					position: absolute;
-					border: 1px solid white;
-					border-right: none;
-					border-top: none;
-				}
-				
 				&.active {
 					background-color: @application-primary-color;
+				}
+				&:hover:not(.active) {
+					background: @background-color-3;
 				}
 
 				button {
@@ -77,9 +66,6 @@
 					color: white;
 					border: none;
 					font-size: 10px;
-					&:hover:not(.selected) {
-						background: @background-color-3;
-					}
 
 					&.toggle-icon {
 						position: relative;
