--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.less
@@ -1,4 +1,6 @@
 @import "ansyn/less/common";
+@import "ansyn/less/colors";
+@import "ansyn/less/globals";
 @import "ansyn/less/z-index-globals";
 
 @popup-padding-bottom: 15px;
@@ -12,7 +14,7 @@
 	transform: translate(0, -100%);
 	.ansyn-tree-view {
 		width: inherit;
-	}
+	};
 
 	ansyn-imagery-status {
 		position: relative;
@@ -26,7 +28,6 @@
 		color: white;
 		display: flex;
 		justify-content: space-between;
-		border-left: 2px solid transparent;
 
 		.selected-case {
 			button.share-link {
@@ -44,7 +45,6 @@
 
 				span.icon-status-bar-share-link {
 					margin-right: 3px;
-					font-size: 18px;
 				}
 
 				&:hover {
