--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
@@ -1,5 +1,6 @@
-@import "ansyn/less/colors";
-@import "ansyn/less/z-index-globals";
+@import 'ansyn/less/colors';
+@import 'ansyn/less/z-index-globals';
+@import 'ansyn/less/globals';
 
 /deep/ .render {
 	display: flex;
@@ -12,7 +13,7 @@
 	width: 100%;
 	line-height: 24px;
 	color: white;
-	justify-content: center;
+	justify-content: space-between;
 	&.with-background {
 		background: rgba(0, 0, 0, 0.6);
 		box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
@@ -25,9 +26,6 @@
 
 	.buttons {
 		line-height: 0;
-		position: absolute;
-		left: 5px;
-		top: 6px;
 		display: flex;
 
 		button.drag-me {
@@ -54,21 +52,9 @@
 			color: white;
 			line-height: 0;
 
-			&.back-to-world-view {
-				cursor: pointer;
-				outline: none;
-				background: black;
-				border: 1px solid grey;
-				flex: 6;
-				height: 100%;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-			}
-
 			&.small-icon-button {
 				margin-left: 3px;
-				font-size: 17px;
+				font-size: @icon-size;
 				background: transparent;
 				border: none;
 				outline: none;
@@ -125,6 +111,10 @@
 				border-bottom-color: white;
 			}
 		}
+	}
+
+	.notifications{
+		padding: 5px;
 	}
 }
 
